[package]
name = "cargo-deny"
description = "Cargo plugin to help you manage large dependency graphs"
repository = "https://github.com/EmbarkStudios/cargo-deny"
version = "0.19.0"
authors = [
  "Embark <opensource@embark-studios.com>",
  "Jake Shadle <jake.shadle@embark-studios.com>",
]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/cargo-deny"
homepage = "https://github.com/EmbarkStudios/cargo-deny"
categories = ["development-tools::cargo-plugins"]
keywords = ["cargo", "license", "spdx", "ci", "advisories"]
exclude = ["docs/", "examples/", ".github/", "tests"]
rust-version = "1.88.0"

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "cargo-deny"
path = "src/cargo-deny/main.rs"

[dependencies]
# Output coloring
nu-ansi-term = "0.50"
# Easy errors
anyhow = "1.0"
# Used to track various things during check runs
bitvec = { version = "1.0", features = ["alloc"] }
# Much nicer paths
camino = "1.1"
cfg-expr = "0.20"
# Allows us to do eg cargo metadata operations without relying on an external cargo
#cargo = { version = "0.71", optional = true }
# Argument parsing, kept aligned with cargo
clap = { version = "4.5", features = ["derive", "env"] }
# Used for diagnostic reporting
codespan = { version = "0.13", features = ["serialization"] }
codespan-reporting = { version = "0.13", features = ["serialization"] }
# Brrrrr
crossbeam = "0.8"
# Logging utilities
fern = "0.7"
# Glob matching
globset = "0.4"
# Native executable detection
goblin = { version = "0.10", default-features = false, features = [
  "elf32",
  "elf64",
  "mach32",
  "mach64",
  "pe32",
  "pe64",
  "te",
] }
# We need to figure out HOME/CARGO_HOME in some cases
home = "0.5"
# Provides graphs on top of cargo_metadata
krates = { version = "0.20", features = ["targets"] }
# Log macros
log = "0.4"
# Faster char searching
memchr = "2.7"
# Nicer sync primitives
parking_lot = "0.12"
# Moar brrrr
rayon = "1.11"
# Laziness, but we already pull it in transitively
regex = "1.11"
# sha-256 hash calculation, already a dependency via rustls/etc
ring = "0.17"
# Used for interacting with advisory databases
rustsec = { version = "0.31", default-features = false }
# Parsing and checking of versions/version requirements
semver = "1.0"
# Gee what could it be
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Avoid some heap allocations when we likely won't need them
smallvec = "1.14"
# Used for parsing and checking SPDX license expressions
spdx = { version = "0.13", features = ["detection-parallel", "detection-inline-cache"] }
# Lazy
strum = { version = "0.27", features = ["derive"] }
# Index retrieval and querying
tame-index = { version = "0.26", default-features = false, features = [
  "local",
  "sparse",
] }
# Timestamp emission
time = { version = "0.3", default-features = false, features = [
  "formatting",
  "macros",
] }
# Deserialization of configuration files and crate manifests
toml-span = { version = "0.6", features = ["reporting"] }
# Small fast hash crate
twox-hash = { version = "2.1", default-features = false, features = ["xxhash32"] }
# Url parsing/manipulation
url = "2.5"
# Directory traversal
walkdir = "2.3"

# HTTP
# HTTP client backing gix, we don't use it directly but need it here for configuration
# due to ...reasons
reqwest = { version = "0.13", default-features = false, features = ["http2", "rustls-no-provider"] }
# We configure TLS manually for reqwest. The version must be kept in line with the
# one used by reqwest
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# We clone/fetch advisory databases
[dependencies.gix]
version = "0.77"
default-features = false
features = [
  "blocking-http-transport-reqwest",
  "blocking-network-client",
  "interrupt",
  "worktree-mutation",
]

[dev-dependencies]
# Folder copying
fs_extra = "1.3"
# Snapshot testing
insta = { version = "1.44", features = ["json"] }
tame-index = { version = "0.26", features = ["local-builder"] }
time = { version = "0.3", features = ["serde"] }
toml-span = { version = "0.6", features = ["serde"] }
# We use this for creating fake crate directories for crawling license files on disk
tempfile = "3.17"
webpki-roots = "1.0"

# [[bench]]
# name = "license_data"
# harness = false

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[workspace]

[profile.release]
lto = "fat"
strip = "symbols"
codegen-units = 1
