[package]
name = "allow-license"
version = "0.1.0"
authors = ["Jake Shadle <jake.shadle@embark-studios.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[[bin]]
name = "allow-license"
path = "main.rs"

[dependencies]
shared = { path = "../shared" }
las = { version = "=0.7.7", features = ["laz"] }

[workspace]
