[package]
name = "sources"
version = "0.1.0"
authors = ["Johan Andersson <johan@embark-studios.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
# this works, crates.io is allowed by default
log = "0.4.8"


# this would also work, because crates.io is allowed by default
#bitflags = "1.2"

# this will fail as our deny.toml is denying unknown git repos
# and this URL is not in the allow list
bitflags = { git = "https://github.com/bitflags/bitflags.git" }