[package]
name = "target-filtering"
version = "0.1.0"
authors = ["Jake Shadle <jake.shadle@embark-studios.com>"]
edition = "2018"

build = "build.rs"

[dependencies]
leftpad = "0.2.0"

# These target specific dependency examples were copied from ring
[target.'cfg(all(any(target_arch = "aarch64", target_arch = "arm", target_arch = "x86", target_arch = "x86_64"), not(target_os = "ios")))'.dependencies]
spin = { version = "0.5.2", default-features = false }

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
libc = { version = "0.2.48", default-features = false }

[target.'cfg(any(target_os = "android", target_os = "freebsd", target_os = "linux", target_os = "netbsd", target_os = "openbsd", target_os = "solaris"))'.dependencies]
lazy_static = { version = "1.3", default-features = false, optional = true }

[target.'cfg(all(target_arch = "wasm32", target_vendor = "unknown", target_os = "unknown", target_env = ""))'.dependencies]
web-sys = { version = "0.3.25", default-features = false, features = ["Crypto", "Window"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.2.8", default-features = false }

# You can also use full target triples isntead of a cfg expression
[target.x86_64-unknown-linux-gnu.dependencies]
nix-xy = { package = "nix", version = "0.16.1" }

[dev-dependencies]
difference = "2.0.0"

[target.'cfg(target_arch = "x86_64")'.dev-dependencies]
ring = "0.16.9"

[target.'cfg(target_feature = "atomics")'.dependencies]
wasm-bindgen-futures = "0.4.6"

# coreaudio is a weird case, the name of the crate is coreaudio-rs,
# but its library name is coreaudio, so the resol