[package]
name = "target-filtering"
version = "0.1.0"
authors = ["Jake Shadle <jake.shadle@embark-studios.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"

build = "build.rs"

[dependencies]

[target.'cfg(target_os = "fuchsia")'.dependencies]
# Oh no, this has a GPL-3.0+ license, which we don't allow!
gtp = "0.1.1"

# Spin is unmaintained, but this config expression won't eval to true for any of our targets, so it's ok!
[target.'cfg(all(any(target_arch = "aarch64", target_arch = "arm", target_arch = "x86", target_arch = "x86_64"), not(target_os = "linux")))'.dependencies]
spin = { version = "0.5.2", default-features = false }

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
libc = { version = "0.2.48", default-features = false }

[target.'cfg(any(target_os = "android", target_os = "freebsd", target_os = "linux", target_os = "netbsd", target_os = "openbsd", target_os = "solaris"))'.dependencies]
lazy_static = { version = "1.3", default-features = false, optional = true }

[target.'cfg(all(target_arch = "wasm32", target_vendor = "unknown", target_os = "unknown", target_env = ""))'.dependencies]
web-sys = { version = "0.3.25", default-features = false, features = ["Crypto", "Window"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.2.8", default-features = false }

# You can also use full target triples instead of a cfg expression
# We actually **ban** the nix package, but since we aren't targeting
# musl, the crate is ignored :)
[target.x86_64-unknown-linux-musl.dependencies]
nix-xy = { package = "nix", version = "0.16.1" }

[dev-dependencies]
difference = "2.0.0"

[target.'cfg(all(target_arch = "wasm32", target_feature = "atomics"))'.dependencies]
wasm-bindgen-futures = "0.4.6"
