[package]
name = "rustsec-compat"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
cargo-deny = { path = "../../" }
rayon = "1.11"
rustsec = { version = "0.32", default-features = false }
semver = "1.0"
serde_json = "1.0"
similar = "2.7"
tame-index = "0.26"
ureq = "3.3"
