[package]
name = "features"
version = "0.1.0"
edition = "2021"

[dependencies]
request = { version = "0.11", package = "reqwest", default-features = false, optional = true, features = [
    "brotli",
    "rustls-tls",
] }
rgb = { version = "0.8.25", optional = true }
serde = { version = "1.0.133", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
git = { package = "git2", version = "0.15", default-features = false }

[build-dependencies]
request = { version = "0.11", package = "reqwest", default-features = false, optional = true, features = [
    "cookies",
] }

[features]
default = ["simple"]
blocking = ["simple", "request?/blocking"]
json = ["request?/json"]
multipart = ["request?/multipart"]
simple = ["json"]
serde = ["dep:serde", "rgb?/serde"]
stream = ["request?/stream"]
zlib = ["git/zlib-ng-compat", "request?/deflate"]
ssh = ["git/ssh", "git/ssh_key_from_memory"]
