[package]
name = "wildcards-test-allow-paths-public"
version = "0.1.0"
authors = []
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wildcards-test-allow-paths-dependency = { path = "../allow-paths-dependency" }
