[package]
name = "wildcards-test-crate"
version = "0.1.0"
authors = []
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "*"
wildcards-test-dep = { path = "../dependency", version = "0.1.0" }
