[package]
name = "member-two"
version = "0.1.0"
edition = "2021"

[dependencies]
spdx-very-old = { version = "0.6", git = "https://github.com/EmbarkStudios/spdx", tag = "0.6.0", package = "spdx" }

[dev-dependencies]
spdx-git.workspace = true

[target.'cfg(target_os = "windows")'.dev-dependencies]
spdx = "0.10"

[target.'cfg(target_os="windows")'.dev-dependencies]
crate-two = { version = "0.1.0", registry = "embark-deny-git" }

[build-dependencies]
spdx = "0.9"
member = { path = "../member-one", package = "member-one" }

[target.'cfg(windows)'.build-dependencies]
crate-two.workspace = true
wildcards-test-allow-git.workspace = true
